--- a/practica1.html
+++ b/practica1.html
@@ -4,13 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer ejemplo</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Page Title</title>
 </head>
 <body>
+<h2>An Unordered HTML List</h2>
+<ul>
+<li>Coffee</li>  
+<li>Tea</li>
+<li>Milk</li>
+</ul>
 
-    <script src="js/function.js">
-
-    </script>
+<h2>An Ordered HTML List</h2>
+<ol>
+<li>Coffee</li>
+<li>Tea</li>
+<li>Milk</li>
+</ol>
 </body>
 </html>
