--- a/practica4.html
+++ b/practica4.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi primer ejemplo</title>
-    <link rel="stylesheet" href="estilos.css">
+    <title>Styles</title>
 </head>
-<body>
+<body style="background-color: powderblue;">
+    
+<h1>This is a heading</h1>  
 
-    <script src="js/function.js">
-
-    </script>
+<p>This is a paragraph</p>
 </body>
 </html>
